--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: mochawesome-report
-          path: cypress/reports/mochawesome
+          path: cypress/reports/html
 
       # Step 7: Upload Cypress videos if tests fail
       - name: Upload Cypress videos
